--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>user-management-system</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
